automata/parser00.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On LPAREN shift to state 1
-- On INT shift to state 2
-- On IF shift to state 3
-- On program shift to state 17
-- On expr shift to state 18
## Reductions:

State 1:
## Known stack suffix:
## LPAREN
## LR(1) items:
expr -> LPAREN . expr RPAREN [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On LPAREN shift to state 1
-- On INT shift to state 2
-- On IF shift to state 3
-- On expr shift to state 15
## Reductions:

State 2:
## Known stack suffix:
## INT
## LR(1) items:
expr -> INT . [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
## Reductions:
-- On RPAREN PLUS MUL EOF ELSE
--   reduce production expr -> INT

State 3:
## Known stack suffix:
## IF
## LR(1) items:
expr -> IF . cond_expr THEN expr [ RPAREN PLUS MUL EOF ELSE ]
expr -> IF . cond_expr THEN expr ELSE expr [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On TRUE shift to state 4
-- On FALSE shift to state 5
-- On cond_expr shift to state 6
## Reductions:

State 4:
## Known stack suffix:
## TRUE
## LR(1) items:
cond_expr -> TRUE . [ THEN ]
## Transitions:
## Reductions:
-- On THEN
--   reduce production cond_expr -> TRUE

State 5:
## Known stack suffix:
## FALSE
## LR(1) items:
cond_expr -> FALSE . [ THEN ]
## Transitions:
## Reductions:
-- On THEN
--   reduce production cond_expr -> FALSE

State 6:
## Known stack suffix:
## IF cond_expr
## LR(1) items:
expr -> IF cond_expr . THEN expr [ RPAREN PLUS MUL EOF ELSE ]
expr -> IF cond_expr . THEN expr ELSE expr [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On THEN shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## IF cond_expr THEN
## LR(1) items:
expr -> IF cond_expr THEN . expr [ RPAREN PLUS MUL EOF ELSE ]
expr -> IF cond_expr THEN . expr ELSE expr [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On LPAREN shift to state 1
-- On INT shift to state 2
-- On IF shift to state 3
-- On expr shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## IF cond_expr THEN expr
## LR(1) items:
expr -> expr . PLUS expr [ RPAREN PLUS MUL EOF ELSE ]
expr -> expr . MUL expr [ RPAREN PLUS MUL EOF ELSE ]
expr -> IF cond_expr THEN expr . [ RPAREN PLUS MUL EOF ELSE ]
expr -> IF cond_expr THEN expr . ELSE expr [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On PLUS shift to state 9
-- On MUL shift to state 11
-- On ELSE shift to state 13
## Reductions:
-- On RPAREN PLUS MUL EOF ELSE
--   reduce production expr -> IF cond_expr THEN expr
** Conflict on PLUS MUL ELSE

State 9:
## Known stack suffix:
## expr PLUS
## LR(1) items:
expr -> expr PLUS . expr [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On LPAREN shift to state 1
-- On INT shift to state 2
-- On IF shift to state 3
-- On expr shift to state 10
## Reductions:

State 10:
## Known stack suffix:
## expr PLUS expr
## LR(1) items:
expr -> expr . PLUS expr [ RPAREN PLUS MUL EOF ELSE ]
expr -> expr PLUS expr . [ RPAREN PLUS MUL EOF ELSE ]
expr -> expr . MUL expr [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On PLUS shift to state 9
-- On MUL shift to state 11
## Reductions:
-- On RPAREN PLUS MUL EOF ELSE
--   reduce production expr -> expr PLUS expr
** Conflict on PLUS MUL

State 11:
## Known stack suffix:
## expr MUL
## LR(1) items:
expr -> expr MUL . expr [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On LPAREN shift to state 1
-- On INT shift to state 2
-- On IF shift to state 3
-- On expr shift to state 12
## Reductions:

State 12:
## Known stack suffix:
## expr MUL expr
## LR(1) items:
expr -> expr . PLUS expr [ RPAREN PLUS MUL EOF ELSE ]
expr -> expr . MUL expr [ RPAREN PLUS MUL EOF ELSE ]
expr -> expr MUL expr . [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On PLUS shift to state 9
-- On MUL shift to state 11
## Reductions:
-- On RPAREN PLUS MUL EOF ELSE
--   reduce production expr -> expr MUL expr
** Conflict on PLUS MUL

State 13:
## Known stack suffix:
## IF cond_expr THEN expr ELSE
## LR(1) items:
expr -> IF cond_expr THEN expr ELSE . expr [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On LPAREN shift to state 1
-- On INT shift to state 2
-- On IF shift to state 3
-- On expr shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## IF cond_expr THEN expr ELSE expr
## LR(1) items:
expr -> expr . PLUS expr [ RPAREN PLUS MUL EOF ELSE ]
expr -> expr . MUL expr [ RPAREN PLUS MUL EOF ELSE ]
expr -> IF cond_expr THEN expr ELSE expr . [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On PLUS shift to state 9
-- On MUL shift to state 11
## Reductions:
-- On RPAREN PLUS MUL EOF ELSE
--   reduce production expr -> IF cond_expr THEN expr ELSE expr
** Conflict on PLUS MUL

State 15:
## Known stack suffix:
## LPAREN expr
## LR(1) items:
expr -> expr . PLUS expr [ RPAREN PLUS MUL ]
expr -> expr . MUL expr [ RPAREN PLUS MUL ]
expr -> LPAREN expr . RPAREN [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On RPAREN shift to state 16
-- On PLUS shift to state 9
-- On MUL shift to state 11
## Reductions:

State 16:
## Known stack suffix:
## LPAREN expr RPAREN
## LR(1) items:
expr -> LPAREN expr RPAREN . [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
## Reductions:
-- On RPAREN PLUS MUL EOF ELSE
--   reduce production expr -> LPAREN expr RPAREN

State 17:
## Known stack suffix:
## program
## LR(1) items:
program' -> program . [ # ]
## Transitions:
## Reductions:
-- On #
--   accept program

State 18:
## Known stack suffix:
## expr
## LR(1) items:
expr -> expr . PLUS expr [ PLUS MUL EOF ]
expr -> expr . MUL expr [ PLUS MUL EOF ]
program -> expr . EOF [ # ]
## Transitions:
-- On PLUS shift to state 9
-- On MUL shift to state 11
-- On EOF shift to state 19
## Reductions:

State 19:
## Known stack suffix:
## expr EOF
## LR(1) items:
program -> expr EOF . [ # ]
## Transitions:
## Reductions:
-- On #
--   reduce production program -> expr EOF

